--- a/_config.yml
+++ b/_config.yml
@@ -1,52 +1,79 @@
-title: amaruak00 blog
-author: amaruak00
-email: amaruak00@hanwha.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  South Korea. Hanwha Systems. Data Scientist. AI Developer.
-show_excerpts: true # set to true to show excerpts on the homepage
+# ----
+# Site
+
+title: amaruak00
+url: "https://amaruak00.github.io"
 baseurl: ""
-url: "https://amaruak00.github.io/"
+google_analytics_key:
+show_full_navigation: true
 
-# Minima date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-sass:
-  sass_dir: _sass
+# Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
+logo: /siteicon.png
+description: amaruak00 blog
+author:
+  name: amaruak00
+  email: amaruak00@hanwha.com
+  twitter: # twitter username without the @ symbol
+social:
+  name: amaruak00
+  links:
+    - https://github.com/amaruak00
 
-permalink: /posts/:title/
-texture:
-  title: amaruak00
-  tagline: Seeing much. Suffering much. Studying much.
-  date_format: "%Y.%b.%-d"
-  style: red 
-  showNav: true
-  showPicker: false
-  navigation:
-          - title: Profile
-            url: /profile
-          - title: Github blog
-            url: /github_blog
-          - title: VS Code
-            url: /vscode
-          - title: PyTorch
-            url: /pytorch
-          - title: Data Science
-            url: /ds
+# -----
+# Build
 
-  # generate social links in footer
-  social_links:
-    github:  amaruak00
-    linkedIn: in/amaruak00
-    rss: rss
- 
+timezone: Etc/UTC
 
-# If you want to link only specific pages in your header, uncomment
-# this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
-
-# Build settings
-# theme: texture
+permalink: pretty
 
 plugins:
+  - jekyll-sitemap
   - jekyll-seo-tag
-#  - jekyll-feed
+  - jekyll-feed
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+  - LICENCE
+
+collections:
+  docs:
+    title: Documentation
+    permalink: /:path/
+    output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: default
+  -
+    scope:
+      path: ""
+      type: "docs"
+    values:
+      seo:
+        type: Article
+      _comments:
+        category: Group navigation links with this field
+        order: Used to sort links in the navigation
+      _options:
+        content:
+          width: 800
+          height: 2000
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      _comments:
+        type: Marks the impact of this release
+
+# -----------
+# CloudCannon
+
+types:
+  - minor
+  - major
