--- a/_config.yml
+++ b/_config.yml
@@ -1,79 +1,91 @@
-# ----
-# Site
-
-title: do code|amaruak00
-url: "https://amaruak00.github.io"
-baseurl: ""
-google_analytics_key:
-show_full_navigation: true
-
-# Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /siteicon.png
-description: Product documentation template for Jekyll.
+site: amaruak00
+url: amaruak00.github.io
+author: Colorie
 author:
-  name: cha.sangwon
-  email: amaruak00@hanwha.com
-  twitter: # twitter username without the @ symbol
-social:
   name: amaruak00
+  email: amaruak00@hanwha.com
+  url: amaruak00.github.io
+  avatar: 
+title: amaruak00
+description: Seeing much, Suffering much, and Studying much
+logo: 
+image: 
+twitter: amaruak00
+twitter:
+  username: amaruak00
+  creator: amaruak00
+  card: summary
+social:
+  name: cha.sangwon
   links:
-    - https://instagram.com/amaruak00
-
-# -----
-# Build
-
-timezone: Etc/UTC
-
+    - https://twitter.com/#
+    - https://www.dribbble.com/#
+    - https://github.com/#
+    - https://codepen.io/#
+  
 permalink: pretty
 
-plugins:
-  - jekyll-sitemap
-  - jekyll-seo-tag
-  - jekyll-feed
+disqus:
+  name: "your disqus username" # required
+  noscript: "Please enable JavaScript to view the comments powered by Disqus." # optional
 
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - LICENCE
+baseurl:             ""
+
+include:
+  - _redirects
+  
+compress_html:
+  clippings: all
+  comments: ["<!-- ", " -->"]
+
+sass:
+  sass_dir:          _sass
+  style:            :compressed
+
+plugins:
+  - jekyll-paginate
+  - jekyll-gist
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - disqus-for-jekyll
 
 collections:
-  docs:
-    title: Documentation
-    permalink: /:path/
+  pages:
     output: true
-
+    permalink: /:name
+  posts:
+    output: true
+    permalink: /:year/:month/:day/:slug
+  projects:
+    output: true
+    permalink: /projects/:slug
+  
 defaults:
   -
     scope:
       path: ""
     values:
-      layout: default
+      layout: "default"
   -
     scope:
       path: ""
-      type: "docs"
+      type: "pages"
     values:
-      seo:
-        type: Article
-      _comments:
-        category: Group navigation links with this field
-        order: Used to sort links in the navigation
-      _options:
-        content:
-          width: 800
-          height: 2000
+      layout: "page"
   -
     scope:
       path: ""
       type: "posts"
     values:
-      _comments:
-        type: Marks the impact of this release
-
-# -----------
-# CloudCannon
-
-types:
-  - minor
-  - major
+      layout: "post"
+  -
+    scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "project"     
+      
+  - scope:
+      path: "assets/images"
+    values:
+      image: true
