--- a/_config.yml
+++ b/_config.yml
@@ -1,91 +1,31 @@
-site: Colorie
-url: amaruak00.github.io
-author: Colorie
-author:
-  name: Colorie
-  email: 
-  url: 
-  avatar: 
-title: Colorie
-description: Colorie - Single column blog and portfolio Jekyll theme 
-logo: 
-image: 
-twitter: ronaldsvilcins  
-twitter:
-  username: ronaldsvilcins
-  creator: ronaldsvilcins
-  card: summary
+title: Long Haul
+description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+
+url: http://brianmaierjr.github.com/long-haul
+baseurl: ""
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
+
+markdown: kramdown
+highlighter: rouge
+plugins: [jekyll-paginate]
+paginate: 5
+
+navigation:
+  - title: Home
+    url: /index.html
+  - title: About
+    url: /about
+  - title: Contact
+    url: /contact
+
 social:
-  name: Ronalds Vilcins
-  links:
-    - https://twitter.com/#
-    - https://www.dribbble.com/#
-    - https://github.com/#
-    - https://codepen.io/#
-  
-permalink: pretty
+  github: brianmaierjr
+  twitter: brianmaierjr
+  facebook: brianmaierjr
+  email: brimaidesigns@gmail.com
+
+google_analytics: "UA-58263416-1"
 
 disqus:
-  name: "your disqus username" # required
-  noscript: "Please enable JavaScript to view the comments powered by Disqus." # optional
-
-baseurl:             ""
-
-include:
-  - _redirects
-  
-compress_html:
-  clippings: all
-  comments: ["<!-- ", " -->"]
-
-sass:
-  sass_dir:          _sass
-  style:            :compressed
-
-plugins:
-  - jekyll-paginate
-  - jekyll-gist
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - disqus-for-jekyll
-
-collections:
-  pages:
-    output: true
-    permalink: /:name
-  posts:
-    output: true
-    permalink: /:year/:month/:day/:slug
-  projects:
-    output: true
-    permalink: /projects/:slug
-  
-defaults:
-  -
-    scope:
-      path: ""
-    values:
-      layout: "default"
-  -
-    scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "page"
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-  -
-    scope:
-      path: ""
-      type: "projects"
-    values:
-      layout: "project"     
-      
-  - scope:
-      path: "assets/images"
-    values:
-      image: true
+    shortname: my-disqus-shortname
