--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,17 @@ url: "https://amaruak00.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: amaruak00
-description: "records for develop"
-avatar: assets/img/amaruak.jpeg 
+description: "records for ai"
+avatar: assets/img/amaruak.svg 
 favicon: assets/favicon.ico
 
 # Header and footer text
+# fotter_text: Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 header_text: Nothing is as miserable as an incompetent pride.
-header_feature_image: assets/img/pexels/kuf-amaruak.jpg
+header_feature_image: assets/img/pexels/computer.jpeg
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+  <a href="mailto:amaruak00@hanwha.com">amaruak00</a> 2021
+
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
