--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,11 +4,11 @@ email_address: amaruak00@hanwha.com   # Full email address, e.g. "sam@example.co
 behance:
 bitbucket:
 dribbble:
-facebook: https://www.facebook.com/profile.php?id=100001813807842
+facebook: profile.php?id=100001813807842
 flickr:
 gitlab:
 github: "amaruak00"
-instagram: https://www.instagram.com/amaruak00/
+instagram: amaruak00
 keybase:
 linkedin: https://www.linkedin.com/in/%EC%83%81%EC%9B%90-%EC%B0%A8-19bbb911a/        # Full URL
 pinterest:
