--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/2026923.png
 favicon: assets/favicon.ico
 
 # Header and footer text
-header_text: amaruak00
+header_text: data_science_garage
 header_feature_image: assets/img/pexels/computer.jpeg
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
